# claudecode

./: .build-manifest.json  .gitignore  .last-cleanup  .mcp.json  .mcp.json.bak-20260508-192330  .sl_quota_start  .sl_usage_log.csv  AGENTS.md  CLAUDE.md  CLAUDE.md.backup  GLOBAL_TASKS.md  README.md  context-essentials.md  mcp-needs-auth-cache.json  mercari_2fa.py  mercari_2fa_retry.py  mercari_auth_state.json  mercari_debug.py  mercari_login.py  mercari_step1.py  mercari_step2.py  plan.md  settings.json  settings.json.bak  settings.json.bak-20260508-163212  settings.json.bak-20260508-211639  settings.json.orig  settings.local.json  setup.sh  statusline.sh  totty2-weekly-line-collect.sh
agents/: CLAUDE.md  (+5 more)
extensions/_build_tool/: pyproject.toml
extensions/_build_tool/src/claude_ext/: __init__.py  be_project_init.py  builder.py  cli.py  manifest.py  models.py  project_init.py
extensions/_build_tool/src/claude_ext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
extensions/_build_tool/src/claude_ext/compiler/: __init__.py  build_manifest.py  claude_md.py  commands.py  hooks.py  routing.py  rules.py  settings.py  skills.py
extensions/_build_tool/src/claude_ext/validator/: __init__.py  conflicts.py  isolation.py  schema.py
extensions/_build_tool/templates/: CLAUDE.md.tmpl
extensions/_build_tool/tests/: conftest.py  test_builder.py  test_compilers.py  test_manifest.py  test_models.py  test_validator_conflicts.py  test_validator_isolation.py  test_validator_schema.py
extensions/_build_tool/tests/fixtures/another-ext/: extension.yaml
(+1844 files in other folders)
